<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="type"
            type="nam.zuchu.asm.models.types.TypesItem" />

        <variable
            name="user"
            type="nam.zuchu.asm.models.users.UsersItem" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clBg"
            android:background="@drawable/custom_bottom_sheet"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
>

            <View
                android:id="@+id/viewDivide"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@color/gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="@string/add_detail_of_expenditure"
                android:textSize="@dimen/_20sdp"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/viewDivide"
                tools:ignore="MissingConstraints" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilAutoUserName"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_30sdp"
                android:hint="@string/choose_username"
                app:boxCornerRadiusBottomEnd="@dimen/_20sdp"
                app:boxCornerRadiusBottomStart="@dimen/_20sdp"
                app:boxCornerRadiusTopEnd="@dimen/_20sdp"
                app:boxCornerRadiusTopStart="@dimen/_20sdp"
                app:helperText="Choose"
                app:helperTextEnabled="true"
                app:helperTextTextColor="@color/red"
                android:textColorHint="@color/white"

                app:hintTextColor="@color/white"
                app:layout_constraintEnd_toEndOf="@id/tvTitle"
                app:layout_constraintStart_toStartOf="@id/tvTitle"
                app:layout_constraintTop_toBottomOf="@id/tvTitle"
                tools:ignore="MissingConstraints">

                <AutoCompleteTextView
                    android:id="@+id/autoCompleteUserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:fallbackLineSpacing="true"
                    android:paddingStart="@dimen/_10sdp"
                    tools:ignore="LabelFor,RtlSymmetry,UnusedAttribute" />
                <!--                android:text="@{user.userName}"-->
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilID"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="0dp"
                android:textColorHint="@color/white"

                android:layout_height="wrap_content"
                android:hint="@string/choose_name_of_expenditures"
                app:boxCornerRadiusBottomEnd="@dimen/_20sdp"
                app:boxCornerRadiusBottomStart="@dimen/_20sdp"
                app:boxCornerRadiusTopEnd="@dimen/_20sdp"
                app:boxCornerRadiusTopStart="@dimen/_20sdp"
                app:helperText="Choose"
                app:helperTextEnabled="true"
                app:helperTextTextColor="@color/red"
                app:hintTextColor="@color/white"
                app:layout_constraintEnd_toStartOf="@id/tvID"
                app:layout_constraintStart_toStartOf="@id/tilAutoUserName"
                app:layout_constraintTop_toBottomOf="@id/tilAutoUserName"
                tools:ignore="MissingConstraints">

                <AutoCompleteTextView
                    android:id="@+id/autoCompleteID"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fallbackLineSpacing="true"
                    android:paddingStart="@dimen/_10sdp"
                    android:textColor="@color/white"
                    tools:ignore="LabelFor,RtlSymmetry,UnusedAttribute" />
            </com.google.android.material.textfield.TextInputLayout>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/acbCalender"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/custom"
                android:text="@string/calender"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/tilAutoUserName"
                app:layout_constraintStart_toStartOf="@id/tilAutoUserName"
                app:layout_constraintTop_toBottomOf="@id/tilID"
                tools:ignore="MissingConstraints" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilDescription"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:textColorHint="@color/white"
                android:hint="@string/description"
                android:orientation="vertical"
                app:counterTextColor="@color/white"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusBottomEnd="@dimen/_20sdp"
                app:boxCornerRadiusBottomStart="@dimen/_20sdp"
                app:boxCornerRadiusTopEnd="@dimen/_20sdp"
                app:boxCornerRadiusTopStart="@dimen/_20sdp"
                app:counterEnabled="true"
                app:counterMaxLength="50"
                app:endIconMode="clear_text"
                app:helperText="@string/require"
                app:helperTextEnabled="true"
                app:helperTextTextColor="@color/red"
                app:hintTextColor="@color/primary"
                app:layout_constraintTop_toBottomOf="@id/acbCalender"
                tools:ignore="MissingConstraints">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tieDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textColorHint="@color/red"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tvID"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:background="@drawable/custom"
                android:gravity="center"
                android:textSize="@dimen/_20sdp"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="@id/tilID"
                app:layout_constraintEnd_toEndOf="@id/tilAutoUserName"
                app:layout_constraintTop_toTopOf="@id/tilID"
                app:layout_constraintVertical_bias="0.2"
                tools:ignore="MissingConstraints" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilTotal"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:hint="@string/press_total_money"
                android:orientation="vertical"
                app:boxBackgroundMode="outline"
                android:textColorHint="@color/white"
                app:counterTextColor="@color/white"

                app:boxCornerRadiusBottomEnd="@dimen/_20sdp"
                app:boxCornerRadiusBottomStart="@dimen/_20sdp"
                app:boxCornerRadiusTopEnd="@dimen/_20sdp"
                app:boxCornerRadiusTopStart="@dimen/_20sdp"
                app:counterEnabled="true"
                app:counterMaxLength="50"
                app:endIconMode="clear_text"
                app:helperText="@string/require"
                app:helperTextEnabled="true"
                app:helperTextTextColor="@color/red"
                app:hintTextColor="@color/primary"
                app:layout_constraintTop_toBottomOf="@id/tilDescription"
                tools:ignore="MissingConstraints">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tieTotal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textColorHint="@color/red"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/acbCancleDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                app:layout_constraintEnd_toStartOf="@id/acbOkDoneDetail"
                app:layout_constraintHorizontal_bias="0.3"
                app:layout_constraintStart_toStartOf="@id/tilDescription"
                app:layout_constraintTop_toBottomOf="@id/tilTotal"
                tools:ignore="MissingConstraints" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/acbOkDoneDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ok"
                app:layout_constraintEnd_toEndOf="@id/tilID"
                app:layout_constraintStart_toEndOf="@id/acbCancleDetail"
                app:layout_constraintTop_toTopOf="@id/acbCancleDetail"
                tools:ignore="MissingConstraints" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>